welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:25: error: not found: value color
    faireV(c:color.yellow)
             ^MethodsPicture:25: error: not found: value c
    faireV(c:color.yellow)
           ^MethodsPicture:26: error: not found: value color
    faireV(color.red)
           ^MethodsPicture:27: error: not found: value color
    faireV(color.blue)
           ^MethodsPicture:28: error: not found: value color
    faireV(color.green)
           ^